--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
-install: pip install tox python-coveralls
-script: tox -v
+python:
+  - "2.7"
+  - "3.5"
+install: pip install tox-travis python-coveralls
+script: tox
 after_success: coveralls
 
 deploy:
