--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
 [tox]
 envlist =
-  py27,
+  py{27,35},
   coverage,
   flake,
+
+[tox:travis]
+2.7 = py27, coverage, flake,
+3.4 = py34, coverage, flake,
 
 [testenv]
 deps =
