Testing travis test deploy to pypi

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ deploy:
     on:
       branch: master
       tags: false
+      repo: theidledeveloper/s3-cmd-website
       condition: $TRAVIS_PYTHON_VERSION = "2.7"
 
 deploy:
